--- a/ActivityFeed.Api/ActivityFeed.Api.csproj
+++ b/ActivityFeed.Api/ActivityFeed.Api.csproj
@@ -118,6 +118,7 @@
   <ItemGroup>
     <Compile Include="Controllers\ActivitiesController.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\HelloController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
